examples/1/style.css
html, body{
  margin: 0;
  padding: 0;
  height: 100%;
}

body{
  background: #eee;
  overflow-x: scroll;
}
#target{
  height: 100%;
  /* min-height: 500px; */
  white-space: nowrap;
  font-size: 0;
  padding: 0 10px;
}

.container{
  background: #bbb;
  display: inline-block;
  margin: 0 10px;
  vertical-align: top;
  white-space: normal;
  font-size: 1rem;
}

.typeA{
  height: 100%;
}
.typeB{
  height: 60%;
}
.typeC{
  height: 300px;
  margin-top: calc(50vh - 150px);
}
.typeD{
  height: 60%;
  vertical-align: bottom;
}

